--- a/Views/Conta/Register.cshtml
+++ b/Views/Conta/Register.cshtml
@@ -23,7 +23,7 @@
 
 
     <a class="logo">
-        <i class="bx bx-shield-alt"></i>
+        <img src="/VIGILANTLOGON.png" alt="VigiLant Logo Shield" style="height: 40px; width: auto; margin-right: 5px;">
         <div class="logo-name"><span>Vigi</span>Lant</div>
     </a>
 
